--- a/pages/courses.hbs
+++ b/pages/courses.hbs
@@ -14,7 +14,7 @@
             </div>
             <div class="card-action actions">
                 {{#if @root.isAuth}}
-                    <a href="/courses/{{id}}" target="_blank">Open course</a>
+                    <a href="/courses/{{id}}" >Open course</a>
                     <form action="/card/add" method="POST">
                         <input type="hidden" name="_csrf" value="{{@root.csurf}}">
                         <input type="hidden" name="id" value="{{id}}">
@@ -22,16 +22,18 @@
                     </form>
                 {{/if}}
             </div>
+            {{#ifEqual userId._id @root.userId}}
             <div class="card-action actions">
                 {{#if @root.isAuth}}
-                    <a href="/courses/{{id}}/edit?allow=true" target="_blank">Edit course</a>
-                    <form action="/courses/remove" method="POST">
-                        <input type="hidden" name="_csrf" value="{{@root.csurf}}">
-                        <input type="hidden" name="id" value="{{id}}">
-                        <button class="btn red">Remove course</button>
-                    </form>
+                <a href="/courses/{{id}}/edit?allow=true" >Edit course</a>
+                <form action="/courses/remove" method="POST">
+                    <input type="hidden" name="_csrf" value="{{@root.csurf}}">
+                    <input type="hidden" name="id" value="{{id}}">
+                    <button class="btn red">Remove course</button>
+                </form>
                 {{/if}}
             </div>
+            {{/ifEqual}}
         </div>
     </div>
 </div>
