--- a/pages/add.hbs
+++ b/pages/add.hbs
@@ -1,18 +1,26 @@
 <h3>Add page</h3>
+
+{{#if error}}
+<p class="alert">{{error}}</p>
+{{/if}}
+
 <form action="/add" method="POST">
     <div class="input-field">
-        <input placeholder="Placeholder" name="title" id="title" type="text" class="validate" required>
+        <input placeholder="Placeholder" name="title" id="title" type="text" class="validate" value="{{data.title}}"
+            required>
         <label for="title">Name of course</label>
         <span class="helper-text" data-error="Write an Name of course"></span>
     </div>
     <div class="input-field">
-        <input placeholder="Placeholder" name="price" id="price" type="number" class="validate" required min="1">
+        <input placeholder="Placeholder" name="price" id="price" type="number" class="validate" value="{{data.price}}"
+            required min="1">
         <label for="price">Price of course</label>
         <span class="helper-text" data-error="Write an Price of course"></span>
     </div>
 
     <div class="input-field">
-        <input placeholder="Placeholder" name="image" id="image" type="text" class="validate" required>
+        <input placeholder="Placeholder" name="image" id="image" type="text" class="validate" value="{{data.image}}"
+            required>
         <label for="img">URL of image</label>
         <span class="helper-text" data-error="Write an URL of image"></span>
     </div>
